@@ -6,6 +6,7 @@ New features:
 ..F.I..... [ZBXNEXT-715] increased the size of sysmaps_elements.label and sysmaps_links.label fields to 2048 characters (Sasha)
 
 Bug fixes:
+A......... [ZBX-7224] fixed host prototype children group deletion (Eduard)
 ..F....... [ZBX-7199] fixed permission issue in bar report (Eduard)
 ..F....... [ZBX-7215] fixed search auto suggest alwasy displaying results in lower case (Pavels)
 ....I..... [ZBX-7166] added database upgrade patches to set status of template triggers to Enabled and state of template items to normal (Andris, Sasha)
